# anomstream-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/actions/stamp-version/: action.yml
.github/workflows/: ci.yml  release.yml  test.yml
benches/: extended.rs  forest_throughput.rs  modules.rs
core/: Cargo.toml
core/benches/: extended.rs  forest_throughput.rs  modules.rs
core/docs/: conformance.md  features.md  performance.md  threat_model.md
core/examples/: alert_clustering.rs  attribution_explain.rs  attribution_stability.rs  audit_trail.rs  bootstrap.rs  bulk_scoring.rs  calibrator.rs  cross_tenant.rs  delete_and_scales.rs  drift_recovery.rs  early_term.rs  evict_idle.rs  external_bench_driver.rs  feature_drift.rs  feedback_adjust.rs  forensic.rs  group_scores.rs  hot_path.rs  meta_drift.rs  nab_ablation.rs  observability.rs  quickstart.rs  readiness_summary.rs  retention.rs  score_and_attribution.rs  score_confidence.rs  severity.rs  shingled.rs  streaming.rs  tdigest_quantiles.rs  tenant_pool.rs  tenant_similarity.rs  thresholded.rs  univariate_spot_bank.rs  warm_reload.rs  with_mimalloc.rs
core/scripts/: README.md
core/scripts/nab/: README.md  bench_rrcf_nab.py
core/scripts/synthetic/: README.md  RcfBenchSynthetic.java  bench_rrcf_synthetic.py  bench_sklearn_synthetic.py  variance_sweep.sh
core/scripts/tsb_ad/: README.md  bench_rrcf_tsb_ad.py  fetch.sh
core/src/: adwin.rs  alert_cluster.rs  audit.rs  bloom.rs  bootstrap.rs  config.rs  count_min_sketch.rs  drift_aware.rs  dynamic_forest.rs  ensemble.rs  error.rs  feedback.rs  group_score.rs  hot_path.rs  lib.rs  matrix_profile.rs  metrics.rs  normalize.rs  online_stats.rs  per_feature_cusum.rs  per_feature_ewma.rs  persistence.rs  serde_util.rs  shingled.rs
core/src/domain/: bounding_box.rs  cut.rs  divector.rs  mod.rs  point.rs  score.rs
core/src/forest/: point_store.rs  random_cut_forest.rs
core/src/pool/: mod.rs  tenant_pool.rs
core/src/sampler/: mod.rs  reservoir.rs
core/src/thresholded/: config.rs  detector.rs  mod.rs
core/src/tree/: mod.rs  node.rs  node_store.rs  random_cut_tree.rs
core/src/visitor/: attribution.rs  combined.rs  mod.rs  scalar_score.rs
core/tests/: alert_cluster.rs  attribution_stability.rs  audit_trail.rs  aws_conformance.rs  bootstrap.rs  bulk_scoring.rs  calibrator.rs  concept_drift.rs  cross_tenant.rs  delete.rs  detection_quality.rs  drift_recovery_integration.rs  early_term.rs  evict_idle.rs  feature_drift.rs  feature_scales.rs  feedback_integration.rs  forensic.rs  fuzz_properties.rs  group_scores.rs  hot_path_integration.rs  initial_accept_fraction.rs  meta_drift.rs  metrics_and_histogram.rs  nab.rs  persistence_roundtrip.rs  readiness.rs  score_with_confidence.rs  severity.rs  shingled_integration.rs  tdigest_quantiles.rs  tenant_pool.rs  tenant_similarity.rs  thresholded_integration.rs  timestamps.rs  tsb_ad_m.rs  univariate_spot_integration.rs  visitor_integration.rs  warm_reload.rs
docs/: conformance.md  features.md  performance.md  threat_model.md
examples/: attribution_explain.rs  attribution_stability.rs  bootstrap.rs  bulk_scoring.rs  calibrator.rs  cross_tenant.rs  delete_and_scales.rs  early_term.rs  external_bench_driver.rs  feedback_adjust.rs  forensic.rs  group_scores.rs  hot_path.rs  meta_drift.rs  observability.rs  quickstart.rs  retention.rs  score_and_attribution.rs  severity.rs  shingled.rs  streaming.rs  tenant_pool.rs  tenant_similarity.rs  thresholded.rs  univariate_spot_bank.rs  warm_reload.rs  with_mimalloc.rs
hotpath/: Cargo.toml
hotpath/benches/: modules.rs
hotpath/examples/: hot_path.rs
hotpath/src/: lib.rs
hotpath/tests/: hot_path_integration.rs
meta/: Cargo.toml
meta/src/: lib.rs
meta/tests/: facade_smoke.rs
scripts/: README.md
scripts/external-bench/: README-aws-java.md  README.md  bench_rrcf.py  bench_sklearn_iforest.py  gen_points.py  run_rcf_rs.sh
scripts/nab/: README.md  RcfBenchNab.java
scripts/synthetic/: README.md  gen_points.py
scripts/tsb_ad/: README.md  RcfBenchTsbAd.java
src/: attribution_stability.rs  calibrator.rs  config.rs  early_term.rs  ensemble.rs  error.rs  feedback.rs  hot_path.rs  lib.rs  lsh_cluster.rs  metrics.rs  normalize.rs  per_feature_cusum.rs  per_feature_ewma.rs  persistence.rs  sage.rs  univariate_spot.rs
src/domain/: bounding_box.rs
src/forest/: point_store.rs  random_cut_forest.rs
src/pool/: tenant_pool.rs
src/sampler/: reservoir.rs
src/thresholded/: config.rs  detector.rs  grade.rs  mod.rs  stats.rs
src/tree/: node.rs  node_store.rs  random_cut_tree.rs
src/visitor/: attribution.rs  mod.rs  scalar_score.rs
tests/: attribution_stability.rs  aws_conformance.rs  bootstrap.rs  bulk_scoring.rs  calibrator.rs  concept_drift.rs  cross_tenant.rs  delete.rs  detection_quality.rs  early_term.rs  feature_scales.rs  feedback_integration.rs  forensic.rs  fuzz_properties.rs  group_scores.rs  hot_path_integration.rs  initial_accept_fraction.rs  meta_drift.rs  metrics_and_histogram.rs  nab.rs  persistence_roundtrip.rs  severity.rs  tenant_pool.rs  tenant_similarity.rs  thresholded_integration.rs  timestamps.rs  tsb_ad_m.rs  univariate_spot_integration.rs  visitor_integration.rs  warm_reload.rs
triage/: Cargo.toml
triage/benches/: modules.rs
triage/examples/: alert_clustering.rs  audit_trail.rs  calibrator.rs  feedback_adjust.rs
triage/src/: alert_cluster.rs  audit.rs  audit_chain.rs  calibrator.rs  feedback.rs  lib.rs  lsh_cluster.rs  sage.rs
triage/tests/: alert_cluster.rs  alert_clusterer_metrics.rs  audit_trail.rs  calibrator.rs  feedback_integration.rs
