[package]
name = "anomstream-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core streaming anomaly detectors + companion primitives (Random Cut Forest, per-feature EWMA / CUSUM, drift detectors, streaming stats) — part of the anomstream toolkit"
readme = "../README.md"
keywords = ["anomaly-detection", "streaming", "random-cut-forest", "drift-detection", "cusum"]
categories = ["algorithms", "science", "data-structures"]

[lints]
workspace = true

[features]
default = ["std", "parallel", "serde", "postcard"]
std = ["rand/std", "rand/std_rng", "rand_chacha/std", "getrandom/std", "thiserror/std"]
serde = ["dep:serde", "rand_chacha/serde"]
serde_json = ["dep:serde_json", "serde"]
postcard = ["dep:postcard", "serde"]
parallel = ["dep:rayon", "std"]

[dependencies]
thiserror = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
getrandom = { workspace = true }
wide = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
mimalloc = { workspace = true }

[[example]]
name = "warm_reload"
required-features = ["postcard", "std"]

[[example]]
name = "nab_ablation"
required-features = ["serde_json"]

[[bench]]
name = "forest_throughput"
harness = false

[[bench]]
name = "extended"
harness = false

[[bench]]
name = "modules"
harness = false
