[package]
name = "anomstream-triage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SOC-opinionated triage layer (Platt calibration, SAGE attribution, alert clustering, feedback, audit) on top of anomstream-core"
readme = "../README.md"
keywords = ["anomaly-detection", "soc", "calibration", "alerting", "triage"]
categories = ["algorithms", "science"]

[lints]
workspace = true

[features]
default = ["std", "serde"]
std = ["anomstream-core/std"]
serde = ["anomstream-core/serde", "dep:serde"]

[dependencies]
anomstream-core = { workspace = true }
serde = { workspace = true, optional = true }
