[package]
name = "anomstream-triage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SOC-opinionated triage layer (Platt calibration, SAGE attribution, alert clustering, feedback, audit) on top of anomstream-core"
readme = "../README.md"
keywords = ["anomaly-detection", "soc", "calibration", "alerting", "triage"]
categories = ["algorithms", "science"]

[lints]
workspace = true

[features]
default = ["std", "serde", "postcard"]
std = ["anomstream-core/std", "rand/std", "rand/std_rng", "rand_chacha/std"]
serde = ["anomstream-core/serde", "dep:serde", "rand_chacha/serde"]
serde_json = ["serde", "anomstream-core/serde_json", "dep:serde_json"]
postcard = ["serde", "anomstream-core/postcard", "dep:postcard"]

[dependencies]
anomstream-core = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }

[dev-dependencies]
anomstream-core = { workspace = true, features = ["std", "serde", "postcard", "parallel"] }
criterion = { workspace = true }
mimalloc = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }
rand_chacha = { workspace = true, features = ["std"] }

[[bench]]
name = "modules"
harness = false
