[package]
name = "anomstream-triage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SOC-opinionated triage layer (Platt calibration, SAGE attribution, alert clustering, feedback, audit) on top of anomstream-core"
readme = "../README.md"
keywords = ["anomaly-detection", "soc", "calibration", "alerting", "triage"]
categories = ["algorithms", "science"]

[lints]
workspace = true

[features]
# default: bare-minimum surface so `no_std` consumers don't
# pay for `std`, `serde`, `rand`-thread-rng, `postcard` they
# never use. Direct-dep callers who want the historical
# "everything on" set opt into `default-features = false,
# features = ["std", "serde", "postcard"]` (or pull in the
# `anomstream` facade crate, whose default features remain
# `["core", "std"]`).
default = []
std = ["anomstream-core/std", "rand/std", "rand/std_rng", "rand/thread_rng", "rand_chacha/std"]
serde = ["anomstream-core/serde", "dep:serde", "rand_chacha/serde"]
serde_json = ["serde", "anomstream-core/serde_json", "dep:serde_json"]
postcard = ["serde", "anomstream-core/postcard", "dep:postcard"]
# Tamper-evident audit trail: HMAC-SHA256-chained AlertRecord
# stream. Pulls `hmac` + `sha2` + `subtle`. Requires `serde +
# postcard` for canonical record serialisation.
audit-integrity = ["std", "serde", "postcard", "dep:hmac", "dep:sha2", "dep:subtle"]

[dependencies]
anomstream-core = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }

[dev-dependencies]
anomstream-core = { workspace = true, features = ["std", "serde", "postcard", "parallel"] }
criterion = { workspace = true }
mimalloc = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }
rand_chacha = { workspace = true, features = ["std"] }

[[bench]]
name = "modules"
harness = false

# Examples carry `required-features` so a `cargo build --examples`
# under bare default features skips the ones that depend on
# std-gated modules (feedback, lsh_cluster, sage) instead of
# failing at compile time.
[[example]]
name = "alert_clustering"
required-features = ["std", "serde", "postcard"]

[[example]]
name = "audit_trail"
required-features = ["std", "serde", "postcard", "serde_json"]

[[example]]
name = "calibrator"
required-features = ["std"]

[[example]]
name = "feedback_adjust"
required-features = ["std"]
